# AutoPR

./: .gitignore  404.html  CNAME  CONTRIBUTING.md  Dockerfile  LICENSE.md  Makefile  README.md  USAGE.md  action-catalogue.html  action.yml  configuring.html  entrypoint.sh  index.html  markdown-page.html  pr_helper.py  pyproject.toml  sitemap.xml  strict_workflow_schema.json  tic_tac_toe.py  trigger_schema.json  workflow-catalogue.html  workflow_schema.json
.autopr/: triggers.yaml
.autopr/cache/: choice.db  prompt.db
.github/workflows/: autopr.yml  build-image.yml  common-pr-from-issue.yml  create-pr-from-issue.yml  lint.yml  manual-pr-from-issue.yml  pyright.yml  pytest.yml  run-tests.yml
assets/css/: styles.2da553d9.css
assets/js/: 0ba5c314.342a2c3e.js  0ba5c314.8340f84f.js  14eb3368.921f0404.js  17896441.d5001322.js  19a5a1a5.5d9463a2.js  19a5a1a5.e2091739.js  1be78505.05b02e8d.js  1f391b9e.b7d271db.js  393be207.926cf401.js  4bdb0d83.63bf4777.js  4bdb0d83.f9336e19.js  4d19cf9f.13952ada.js  4d19cf9f.dbb0822f.js  5a3e7dee.85e39996.js  5a3e7dee.ca68a41d.js  646.98976a6d.js  66a9e443.b6813fd2.js  8d838df1.45083d85.js  935f2afb.2fefd9f6.js  935f2afb.e7b56f75.js  9cc0f8dc.8c3fe01d.js  ba0f0454.4f177ad0.js  ba0f0454.db816dbf.js  cf619b78.0f1058db.js  cf619b78.2323de10.js  cf619b78.4bbfd986.js  cf678179.26d75a19.js  cf678179.4fa7bbe4.js  d01a2720.67db6ae0.js  (+11 more)
autopr/: README.md  constants.xml  gh_actions_entrypoint.py  log_config.py  main.py  triggers.py  validators.py
category/: -installing.html  -reference.html  -tutorials.html
installing/: github.html
pr_drafter/: generate.py  generation_service.py  gh_actions_entrypoint.py  git_utils.py  main.py  models.py  validators.py
reference/: actions.html  triggers.html  workflows.html
tests/: test_action_service.py  test_plan_and_code.py  test_tokenizer.py
tutorials/: setting-up-yaml-schema.html  writing-a-workflow.html  writing-an-action.html
website/: docusaurus.config.js  package-lock.json
workflows/: create-pr-from-issue.yml
(+301 files in other folders)
