[tool.poetry]
name = "autopr"
version = "0.1.0"
description = ""
authors = ["Rafael Irgolic <hello@irgolic.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "autopr"}]

[tool.poetry.dependencies]
python = "^3.9"
guardrails-ai = "^0.1.3"
pydantic = "^1.10.6"
gitpython = "^3.1.31"
pytest-subtests = "^0.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
