[tool.poetry]
name = "autopr"
version = "0.1.0"
description = ""
authors = ["Rafael Irgolic <hello@irgolic.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "autopr"}]

[tool.poetry.dependencies]
python = "^3.9"
guardrails-ai = "^0.1.3"
pydantic = "^1.10.6"
gitpython = "^3.1.31"
transformers = "^4.27.1"
structlog = "^22.3.0"
tenacity = "^8.2.2"

[tool.poetry.group.test.dependencies]
pyright = "^1.1.300"
pytest = "^7.2.2"
pytest-subtests = "^0.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
exclude = ["**/resources/**"]
include= ["**/autopr/**"]